--- a/app/src/main/res/layout/registration.xml
+++ b/app/src/main/res/layout/registration.xml
@@ -121,6 +121,7 @@
         <Button
             android:id="@+id/button"
             android:layout_width="match_parent"
+            android:onClick="addData"
             android:layout_height="wrap_content"
             android:text="Submit" />
     </LinearLayout>
