--- a/app/src/main/res/layout/coach_profile.xml
+++ b/app/src/main/res/layout/coach_profile.xml
@@ -77,7 +77,7 @@
         tools:targetApi="o" />
 
     <TextView
-        android:id="@+id/fname"
+        android:id="@+id/Cfname"
         android:layout_width="102dp"
         android:layout_height="31dp"
         android:layout_marginStart="24dp"
