--- a/app/src/main/res/layout/student_profile.xml
+++ b/app/src/main/res/layout/student_profile.xml
@@ -59,7 +59,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/student_profile_pic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -77,7 +77,7 @@
         android:layout_marginTop="31dp"
         android:text="@string/fname"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toEndOf="@+id/student_profile_pic"
         app:layout_constraintTop_toBottomOf="@+id/student_profile_header" />
 
     <TextView
@@ -99,7 +99,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/college"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toEndOf="@+id/student_profile_pic"
         app:layout_constraintTop_toBottomOf="@+id/fname" />
 
     <TextView
@@ -110,7 +110,7 @@
         android:layout_marginTop="6dp"
         android:text="@string/location"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toEndOf="@+id/student_profile_pic"
         app:layout_constraintTop_toBottomOf="@+id/college" />
 
     <TextView
@@ -125,7 +125,7 @@
         android:textAppearance="@android:style/TextAppearance.DeviceDefault"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/student_profile_pic" />
 
     <TextView
         android:id="@+id/personal_stats"
@@ -139,7 +139,7 @@
         android:textAppearance="@android:style/TextAppearance.DeviceDefault"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/student_profile_pic" />
 
     <View
         android:id="@+id/divider2"
